plugins {
	id 'java'
	id 'io.quarkus'
	id "io.freefair.lombok" version "8.0.1"
}

group 'com.ebp.openQuarterMaster'
version '1.0.25'

repositories {
	mavenCentral()
	mavenLocal()
	//for getting OQM Library snapshot versions
	maven({url= "https://s01.oss.sonatype.org/content/repositories/snapshots/"})
}

dependencies {
	implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
	implementation 'io.quarkus:quarkus-resteasy-reactive'
	implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
	implementation 'io.quarkus:quarkus-resteasy-reactive-qute'
	implementation 'io.quarkus:quarkus-smallrye-openapi'
	implementation 'io.quarkus:quarkus-smallrye-jwt'// https://quarkus.io/guides/security-properties
	implementation 'io.quarkus:quarkus-smallrye-jwt-build'
	implementation 'io.quarkus:quarkus-smallrye-health'
	implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-amqp'
	implementation 'io.quarkus:quarkus-opentelemetry'
	implementation 'io.quarkus:quarkus-config-yaml'
	implementation 'io.quarkus:quarkus-qute'
	implementation 'io.quarkus:quarkus-arc'
	implementation 'io.quarkus:quarkus-mongodb-panache'
	implementation 'io.quarkus:quarkus-hibernate-validator'
	implementation 'io.quarkus:quarkus-elytron-security'
	implementation 'io.quarkus:quarkus-micrometer-registry-prometheus'
	implementation 'io.quarkus:quarkus-container-image-jib'
	implementation 'io.quarkus:quarkus-rest-client'
	implementation 'io.quarkus:quarkus-rest-client-jackson'
	implementation 'io.quarkus:quarkus-mailer'
	implementation 'io.quarkus:quarkus-scheduler'
	//implementation 'io.opentelemetry.instrumentation:opentelemetry-mongo-3.1:1.24.0-alpha'

	implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.4'

	implementation 'com.itextpdf:html2pdf:4.0.5'

	// https://quarkus.io/guides/logging
	implementation 'org.jboss.slf4j:slf4j-jboss-logmanager'

	//webjars
	implementation 'org.webjars:jquery:3.6.4'
	implementation 'org.webjars:bootstrap:5.2.3'
//	implementation 'org.webjars.npm:bootstrap-icons:1.10.2' //doesn't contain everything needed
//    implementation 'org.webjars:js-cookie:2.2.1' //out of date
//    implementation 'org.webjars:spin-js:2.1.0'

	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-core:1.0.61-1-167-6-SNAPSHOT'
	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-moduleDriver:1.0.2-DEV'

	// https://mvnrepository.com/artifact/tech.units/indriya
	//     https://unitsofmeasurement.gitbook.io/uom-guide/getting-started/getting-started-with-indriya
	implementation 'tech.units:indriya:2.1.4'
	implementation 'systems.uom:systems-common:2.1'
	// https://mvnrepository.com/artifact/tech.uom.lib/uom-lib-jackson
	implementation 'tech.uom.lib:uom-lib-jackson:2.1'

	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.apache.commons:commons-compress:1.23.0'
	implementation 'org.apache.commons:commons-csv:1.10.0'

	implementation 'uk.org.okapibarcode:okapibarcode:0.3.3'

	/*
	Test Dependencies
	 */
	testImplementation group: 'io.quarkus', name: 'quarkus-junit5'
	testImplementation group: 'io.quarkus', name: 'quarkus-jacoco' // https://quarkus.io/guides/tests-with-coverage
	testImplementation group: 'io.rest-assured', name: 'rest-assured'

	testImplementation 'org.testcontainers:mongodb:1.18.0'
	testImplementation 'com.github.dasniko:testcontainers-keycloak:2.5.0'
	//2.1.2 seems dud, fails to start & null pointers
	testImplementation 'org.keycloak:keycloak-admin-client:21.1.0'
	// 17.0.1 seems dud, might be related to keycloak issue
	testImplementation 'io.jaegertracing:jaeger-testcontainers:0.7.0'
	testImplementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
	testImplementation 'org.testcontainers:selenium:1.18.0'
	testImplementation 'com.deque:axe-selenium:3.0'
	testImplementation 'net.datafaker:datafaker:1.9.0'
}

java {
	java {
		toolchain {
			languageVersion.set(JavaLanguageVersion.of(17))
		}
	}
}

compileJava {
	options.encoding = 'UTF-8'
	options.compilerArgs << '-parameters'
}

compileTestJava {
	options.encoding = 'UTF-8'
}

test {
	minHeapSize = "128m" // initial heap size
	maxHeapSize = "1g" // maximum heap size
	jvmArgs(
		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
		"--add-opens", "java.base/java.io=ALL-UNNAMED",
		"--add-opens", "java.base/java.util=ALL-UNNAMED",
		"--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
	)
}

/**
 * Used to print the current version of this project.
 *
 * Used by the `makeInstallers.sh` script to get the version.
 */
tasks.register('printVersion') {
	doLast {
		println project.version
	}
}

